# cmake-project-template

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/yby/: CMakeLists.txt  yby.cpp  yby.h
src/yby/random/: CMakeLists.txt  random.cpp  random.h
